fix: overflow-xに対するスタイルの記述をhtmlからbodyに移行してモーダルウィンドウに関する不具合を修正

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,9 @@
 html {
   background-color: #f5f5f5;
   scroll-behavior: smooth;
+}
+
+body {
   overflow-x: hidden;
 }
 
